fixed alignment, text, css

--- a/css/style.css
+++ b/css/style.css
@@ -23,32 +23,43 @@ nav {
     padding:5px; 
     font-family: 'Shadows Into Light', cursive;
     font-size: 30px;
+    
+}
 
 article {
     width:100%;
     float:center;
     padding:10px; 
-    border: 2px solid lightgrey;
+    
     font-family: 'Shadows Into Light', cursive;
     margin-right: auto;
     margin-left: auto;
+
     
 }
-    
+
+h1 {font-weight:100;}
+h2 {font-weight: 100}
+h3 {font-weight: 300}
+body {font-size: 25px;}
+     
+p {font-size: 22px;
+}
 	
+
 
 article2 {
     width:100%;
     float:inherit;
     padding:10px; 
-    border: 2px solid lightgrey;
+    
    
     
 }
 photos {
   width:100%;
   padding:10px; 
-  border: 2px solid lightgrey;
+  
     float:inherit;
   text-align: center;
   position:absolute;
